pkl-core/src/test/files/LanguageSnippetTests/input/errors/invalidGlobImport7.pkl
import* "../../input-helper/globtest/**.pkl" as globbedImports

res: globbedImports
